crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provides_full-solved.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Product.id\", color=forestgreen ]\n    2 [ label = \"Category.id\", color=forestgreen ]\n    3 [ label = \"Category.name\", color=forestgreen ]\n    4 [ label = \"Category.id\", color=forestgreen ]\n    5 [ label = \"Category.name\", color=forestgreen ]\n    6 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"products#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"id#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"categories#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    11 [ label = \"categories#category\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"id#category\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    15 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"id#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    18 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label = \"id#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    20 [ label = \"name#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    21 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    22 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    23 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    24 [ label = \"id#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    25 [ label = \"name#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    26 [ label=\"\", style=dashed]\n    0 -> 6 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 10 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 14 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 17 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 19 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    19 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 20 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    20 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 21 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 23 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 14 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 24 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    24 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    23 -> 25 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    25 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    23 -> 17 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    26 -> 0 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Product.id", steiner=1 ]
    2 [ label = "Category.id", steiner=1 ]
    3 [ label = "Category.name", steiner=1 ]
    4 [ label = "Category.id", steiner=1 ]
    5 [ label = "Category.name", steiner=1 ]
    6 [ label = "Root#products", steiner=1 ]
    7 [ label = "products#products", steiner=1 ]
    8 [ label = "id#products", steiner=1 ]
    9 [ label = "categories#products@provides", steiner=1 ]
    10 [ label = "FedEntity#category", steiner=0 ]
    11 [ label = "categories#category", steiner=0 ]
    12 [ label = "id#category", steiner=0 ]
    13 [ label = "name#category", steiner=0 ]
    14 [ label = "FedEntity#subcategories", steiner=0 ]
    15 [ label = "subCategories#subcategories", steiner=0 ]
    16 [ label = "id#subcategories", steiner=0 ]
    17 [ label = "FedEntity#category", steiner=0 ]
    18 [ label = "name#category", steiner=0 ]
    19 [ label = "id#products@provides", steiner=1 ]
    20 [ label = "name#products@provides", steiner=1 ]
    21 [ label = "FedEntity#category", steiner=0 ]
    22 [ label = "name#category", steiner=0 ]
    23 [ label = "subCategories#products@provides", steiner=1 ]
    24 [ label = "id#products@provides", steiner=1 ]
    25 [ label = "name#products@provides", steiner=1 ]
    26 [ label="", style=dashed]
    0 -> 6 [ cost=1, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    8 -> 1 [ cost=0, steiner=1]
    7 -> 9 [ cost=0, steiner=1]
    7 -> 10 [ cost=1, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 2 [ cost=0, steiner=0]
    11 -> 13 [ cost=0, steiner=0]
    13 -> 3 [ cost=0, steiner=0]
    11 -> 14 [ cost=1, steiner=0]
    14 -> 15 [ cost=0, steiner=0]
    15 -> 16 [ cost=0, steiner=0]
    16 -> 4 [ cost=0, steiner=0]
    15 -> 17 [ cost=1, steiner=0]
    17 -> 18 [ cost=0, steiner=0]
    18 -> 5 [ cost=0, steiner=0]
    9 -> 19 [ cost=0, steiner=1]
    19 -> 2 [ cost=0, steiner=1]
    9 -> 20 [ cost=0, steiner=1]
    20 -> 3 [ cost=0, steiner=1]
    9 -> 21 [ cost=1, steiner=0]
    21 -> 22 [ cost=0, steiner=0]
    22 -> 3 [ cost=0, steiner=0]
    9 -> 23 [ cost=0, steiner=1]
    9 -> 14 [ cost=1, steiner=0]
    23 -> 24 [ cost=0, steiner=1]
    24 -> 4 [ cost=0, steiner=1]
    23 -> 25 [ cost=0, steiner=1]
    25 -> 5 [ cost=0, steiner=1]
    23 -> 17 [ cost=1, steiner=0]
    26 -> 0 [ cost=0, steiner=1]
}
