crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provides_full-solver.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Product.id\", style=dashed ]\n    2 [ label = \"Category.id\", style=dashed ]\n    3 [ label = \"Category.name\", style=dashed ]\n    4 [ label = \"Category.id\", style=dashed ]\n    5 [ label = \"Category.name\", style=dashed ]\n    6 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    7 [ label = \"products#products\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label = \"id#products\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"categories#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    11 [ label = \"categories#category\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"id#category\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    15 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"id#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    18 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label = \"id#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"name#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    21 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    22 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    23 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    24 [ label = \"id#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    25 [ label = \"name#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    0 -> 6 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 10 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 14 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 17 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 21 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 14 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    24 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    25 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 17 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Product.id", steiner=0 ]
    2 [ label = "Category.id", steiner=0 ]
    3 [ label = "Category.name", steiner=0 ]
    4 [ label = "Category.id", steiner=0 ]
    5 [ label = "Category.name", steiner=0 ]
    6 [ label = "Root#products", steiner=0 ]
    7 [ label = "products#products", steiner=0 ]
    8 [ label = "id#products", steiner=0 ]
    9 [ label = "categories#products@provides", steiner=0 ]
    10 [ label = "FedEntity#category", steiner=0 ]
    11 [ label = "categories#category", steiner=0 ]
    12 [ label = "id#category", steiner=0 ]
    13 [ label = "name#category", steiner=0 ]
    14 [ label = "FedEntity#subcategories", steiner=0 ]
    15 [ label = "subCategories#subcategories", steiner=0 ]
    16 [ label = "id#subcategories", steiner=0 ]
    17 [ label = "FedEntity#category", steiner=0 ]
    18 [ label = "name#category", steiner=0 ]
    19 [ label = "id#products@provides", steiner=0 ]
    20 [ label = "name#products@provides", steiner=0 ]
    21 [ label = "FedEntity#category", steiner=0 ]
    22 [ label = "name#category", steiner=0 ]
    23 [ label = "subCategories#products@provides", steiner=0 ]
    24 [ label = "id#products@provides", steiner=0 ]
    25 [ label = "name#products@provides", steiner=0 ]
    0 -> 6 [ cost=1, steiner=0]
    6 -> 7 [ cost=0, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 1 [ cost=0, steiner=0]
    7 -> 9 [ cost=0, steiner=0]
    7 -> 10 [ cost=1, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 2 [ cost=0, steiner=0]
    11 -> 13 [ cost=0, steiner=0]
    13 -> 3 [ cost=0, steiner=0]
    11 -> 14 [ cost=1, steiner=0]
    14 -> 15 [ cost=0, steiner=0]
    15 -> 16 [ cost=0, steiner=0]
    16 -> 4 [ cost=0, steiner=0]
    15 -> 17 [ cost=1, steiner=0]
    17 -> 18 [ cost=0, steiner=0]
    18 -> 5 [ cost=0, steiner=0]
    9 -> 19 [ cost=0, steiner=0]
    19 -> 2 [ cost=0, steiner=0]
    9 -> 20 [ cost=0, steiner=0]
    20 -> 3 [ cost=0, steiner=0]
    9 -> 21 [ cost=1, steiner=0]
    21 -> 22 [ cost=0, steiner=0]
    22 -> 3 [ cost=0, steiner=0]
    9 -> 23 [ cost=0, steiner=0]
    9 -> 14 [ cost=1, steiner=0]
    23 -> 24 [ cost=0, steiner=0]
    24 -> 4 [ cost=0, steiner=0]
    23 -> 25 [ cost=0, steiner=0]
    25 -> 5 [ cost=0, steiner=0]
    23 -> 17 [ cost=1, steiner=0]
}
